/*
  Copyright 2010-2024 BusinessCode GmbH, Germany

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
*/
//**************************************
// Handle compilation of BCD-UI's Java server and generation of Java classes from xsd
apply plugin: 'java' // because we are also imported else where, we can not use the new plugins{} mechanism (gradle 4.1)
sourceCompatibility = JavaVersion.VERSION_17

// Add jaxb gensrc to default source set
sourceSets {
  main {
    java {
      srcDirs = [ "src/main/java", "$buildDir/gensrc/main/java" ]
    }
  }
}

// 3rdParty jars
configurations { antLib }
configurations.all {
  // The list is exhaustive, we don't need transitive dependency during compile or run
  transitive = false
}

// Import dependencies of BCD-UI lib
apply from: '../../BCD-UI/Docu/development/bcdui_dependencies.gradle'

dependencies {
  repositories {
    mavenCentral()
  }

  // Needed by Ant during build
  antLib 'org.glassfish.jaxb:jaxb-core:4.0.5'
  antLib 'org.glassfish.jaxb:jaxb-xjc:4.0.5'
  antLib 'org.glassfish.jaxb:txw2:4.0.5'
  antLib 'org.glassfish.jaxb:jaxb-runtime:4.0.5'
  antLib 'com.sun.istack:istack-commons-runtime:4.2.0'
  antLib 'com.sun.istack:istack-commons-tools:4.2.0'
  antLib 'com.sun.xml.bind.external:rngom:4.0.5'
  antLib 'com.sun.xml.bind.external:relaxng-datatype:4.0.5'
  antLib 'com.sun.xml.dtd-parser:dtd-parser:1.5.1'
  antLib 'org.glassfish.jaxb:xsom:4.0.5'
  antLib 'org.glassfish.jaxb:codemodel:4.0.5'
  antLib 'jakarta.activation:jakarta.activation-api:2.1.3'
  antLib 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
}

//********************************
// Generate java sources based on XSDs into gensrc/java
// Currently 'subjectsettings' and 'menu'
task bcduiGensrcJaxb {

  // List of JAXB types for be generated from xsd
  def genJaxbTypes = project.hasProperty('bcdui.genJaxbTypes') ? project.getProperty('bcdui.genJaxbTypes').split(", |,| ") : []

  onlyIf { genJaxbTypes.size() > 0 }

  def taskDestDirName = "$buildDir/gensrc/main/java"

  // For up-to-date check
  genJaxbTypes.each { xsdName ->
    inputs.file "$bcdXsdDir/$xsdName-1.0.0.xsd"
    outputs.dir "$taskDestDirName/de/businesscode/bcdui/$xsdName"
  }

  doLast {
    System.setProperty('javax.xml.accessExternalSchema', 'file')
    ant.taskdef(name: 'xjc', classname: 'com.sun.tools.xjc.XJCTask', classpath: configurations.antLib.asPath)

    file(taskDestDirName).mkdirs()

    genJaxbTypes.each { xsdName ->
      delete taskDestDirName+'de/businesscode/$xsdName/config'
      ant.xjc( destdir: taskDestDirName ) {
        ant.schema file: "$bcdXsdDir/$xsdName-1.0.0.xsd"
      }
    }
  }
}

//*********************************
// Java Plugin default task configuration
// Compile java, making sure we have generated sources before
compileJava {
  dependsOn bcduiGensrcJaxb
  options.debug = true
  options.debugOptions.debugLevel = "source,lines,vars"
}

//*********************************
// Java Plugin default task configuration
jar {
  archiveBaseName = "$artifactsBaseName-server"
  archiveVersion  = bcduiVersion
  manifest {
    attributes( bcduiManifestAttributes() )
  }
  metaInf {
    from bcduiMetaInf
  }
}

//********************************
// Refers to Java Plugin's default clean task
task bcduiClean {
  group = 'bcd-ui'
  dependsOn clean
}

//********************************
// Refers to default task
task sourcesJar(type: Jar, dependsOn: classes) {
  archiveClassifier = 'sources'
  archiveBaseName = "$artifactsBaseName-server"
  archiveVersion  = bcduiVersion
  from sourceSets.main.allSource
}

//********************************
// Convenience task, collecting all 3rdParty dependencies
task bcduiServerCollect3rdPartyJars ( type: Copy ) {
  group 'bcd-ui/advanced'
  def taskDestDir = '3rdPartyJars'
  description "Collects all 3rd party dependency jars in Server|JspTaglib/$buildDir.name/$taskDestDir"

  into "$buildDir/$taskDestDir"
  from(configurations.compileClasspath - (configurations.compileClasspath - configurations.runtimeClasspath)) {
    into "compileAndWebinf"
  }
  from(configurations.runtimeClasspath - configurations.compileClasspath) {
    into "onlyWebinf"
  }
  from(configurations.compileClasspath - configurations.runtimeClasspath) {
    into "compileOnlyNotWebinf"
  }
}

artifacts {
  archives sourcesJar
}
